<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.zipcodepro.zipcodepro.ui.activity.MainActivity">

    <ProgressBar
        android:id="@+id/main_progressBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:padding="10dp"
        android:visibility="gone"/>

    <LinearLayout
        android:id="@+id/main_network_error_linearlayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:visibility="gone"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/error_network_message"/>

            <Button
                android:id="@+id/main_reload_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/error_network_reload_btn"/>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/main_linearlayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="gone">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:text="@string/zipcode_input_label"/>

                <EditText
                    android:id="@+id/main_zipcode_et"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:inputType="number"
                    android:maxLength="@integer/inputMaxLength"
                    android:imeOptions="actionNext" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:text="@string/distance_input_label"/>

                <EditText
                    android:id="@+id/main_distance_et"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:maxLength="@integer/inputMaxLength"
                    android:imeOptions="actionSearch"
                    android:padding="10dp"/>

                <TextView
                    android:id="@+id/main_distance_unit_textview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="5dp"/>

            </LinearLayout>

            <Button
                android:id="@+id/main_search_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="20dp"
                android:layout_marginEnd="40dp"
                android:layout_gravity="end"
                android:text="@string/search_btn_label"/>

            <TextView
                android:id="@+id/main_error_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="20dp"
                android:textColor="@color/colorErrorText"
                android:visibility="gone"/>

            <TextView
                android:id="@+id/main_list_label_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:text="@string/zipcode_list_label"
                android:visibility="gone"/>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/main_recyclerview"
                android:scrollbars="vertical"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:padding="1dp"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:background="@drawable/border_background"
                android:visibility="gone">

            </android.support.v7.widget.RecyclerView>
        </LinearLayout>

    </LinearLayout>

</FrameLayout>
